--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "firebase-admin": "^11.11.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
-    "mongodb": "^6.1.0",
+    "mongodb": "^6.2.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.1",
-    "nodemon": "^3.0.1",
+    "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "sweetalert2": "^11.7.31"
   },
