--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.7.31"
   },
   "devDependencies": {
